<resources>
    <string name="app_name">Soulbeats</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="albums">Albums</string>
    <string name="album_cover">Album cover</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="field_is_required">This field is required!</string>
    <string name="login_password_incorrect">Login or password is incorrect!</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="passwords_not_match">Passwords do not match!</string>
    <string name="username_or_email_already_taken">Username or email is already taken!</string>
    <string name="hello">Hello</string>
    <string name="log_out">Log out</string>
</resources>